infra/k8s/prod/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # rewrite-target: /$1 -> /api/bill/v1.0/user/me -> /v1.0/user/me
    cert-manager.io/cluster-issuer: "issuer-config"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - e-voting.app
        - www.e-voting.app
      secretName: e-voting-app
  rules:
    - host: e-voting.app
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: internal-svc
                port:
                  number: 9069
          - path: /api/voting/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-svc
                port:
                  number: 5000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-svc
                port:
                  number: 80
    - host: www.e-voting.app
      http:
        paths:
          - path: /api/auth/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: internal-svc
                port:
                  number: 9069
          - path: /api/voting/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: voting-svc
                port:
                  number: 5000
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: client-svc
                port:
                  number: 80
